WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200152
[Win][WK1] The inspected webview window is misplaced after changing Web Inspector frontend window height
https://bugs.webkit.org/show_bug.cgi?id=200152
Summary
[Win][WK1] The inspected webview window is misplaced after changing Web Inspe...
Fujii Hironori
Reported
2019-07-25 22:16:08 PDT
[Win][WK1] The inspected webview window is misplaced after changing Web Inspector frontend window height Note: Windows WK1 has a bug Web Inspector frontend window height can't be changed in high DPI at the moment. Use low DPI display to test this bug. 1. Start WK1 MiniBrowser 2. Open Web Inspector 3. Change Web Inspector frontend widow height 4. inspected WebView window is misplaced In WebInspectorFrontendClient::setAttachedWindowHeight the size of m_inspectedWebViewHwnd is changed without taking toolbar height into account.
Attachments
Patch
(3.00 KB, patch)
2019-07-25 22:28 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-07-25 22:28:05 PDT
Created
attachment 374939
[details]
Patch
Fujii Hironori
Comment 2
2019-07-25 22:41:55 PDT
(In reply to Fujii Hironori from
comment #0
)
> Note: Windows WK1 has a bug Web Inspector frontend window height can't be > changed in high DPI at the moment. Use low DPI display to test this bug.
Filed this issue:
Bug 200153
– [Win][WK1] Can't change Web Inspector frontend height in high DPI
Fujii Hironori
Comment 3
2019-07-25 23:16:08 PDT
Comment on
attachment 374939
[details]
Patch Clearing flags on attachment: 374939 Committed
r247855
: <
https://trac.webkit.org/changeset/247855
>
Fujii Hironori
Comment 4
2019-07-25 23:16:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-07-25 23:17:29 PDT
<
rdar://problem/53575939
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug